add css file, creat misrekes in header, section1,2,3,4

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ button {
   padding: 0 15px 0 15px;
 }
 section {
-  padding: 60px 0;
+  padding: 120px 0;
 }
 .header-inner {
   display: flex;
@@ -66,10 +66,8 @@ section {
 }
 .header-list {
   display: flex;
-  flex-grow: 1;
   gap: 24px;
   align-items: center;
-  justify-content: flex-start;
 }
 
 .content-logo {
@@ -89,7 +87,6 @@ section {
   gap: 40px;
   align-items: center;
   flex-grow: 1;
-  padding: 24px;
 }
 .header-meny-list {
   display: flex;
@@ -99,6 +96,7 @@ section {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-decoration: none;
+  padding: 24px;
 }
 .header-meny-list:hover {
   color: #404bbf;
@@ -137,19 +135,18 @@ section {
 }
 /* End block base */
 
-/* Hero section */
+/* Hero section-1 */
+
 .hero-logo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
   background-color: #2e2f42;
   color: #ffffff;
   text-align: center;
   text-transform: capitalize;
   padding: 188px 0;
-  margin: 0 auto;
-}
-.hero-inner {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin: 0 auto;
 }
 .hero-slogan {
@@ -158,15 +155,13 @@ section {
   line-height: 1.07;
   letter-spacing: 0.02em;
   max-width: 496px;
-  padding-bottom: 48px;
   text-align: center;
 }
-.hero-actions {
-  display: flex;
-  align-items: center;
-}
+
 /* button */
 .button-primery {
+  display: block;
+  margin: auto;
   color: #ffffff;
   background-color: #4d5ae5;
   cursor: pointer;
@@ -177,6 +172,10 @@ section {
   text-transform: capitalize;
   padding: 16px 32px;
   border-radius: 4px;
+  margin-top: 48px;
+  min-width: 169px;
+  height: 56px;
+  border: none;
 }
 .button-primery:hover {
   background-color: #404bbf;
@@ -186,20 +185,21 @@ section {
 }
 /* end button */
 
-/* deteils */
+/* deteils section-2 */
 .adventege-section {
   background-color: #fff;
-  padding: 129px 0;
+  padding: 120px 0;
 }
 .adventege-list {
   display: flex;
   gap: 24px;
-  flex-basis: calc((100% - 3 * 24px) / 4);
+
   margin: 0 auto;
 }
 .adentege-item {
   display: flex;
   align-items: center;
+  flex-basis: calc((100% - 3 * 24px) / 4);
 }
 .category {
   color: #2e2f42;
@@ -217,36 +217,35 @@ section {
   letter-spacing: 0.02em;
 }
 /* our team */
-.portfolio-section {
-  padding: 120px 0;
-}
+
 .team-section {
   background-color: #f4f4fd;
   text-align: center;
   color: #2e2f42;
+  padding: 120px 0;
 }
-.team-list {
-  padding-bottom: 120px;
-}
-.team-inner {
-  display: flex;
-  gap: 24px;
-}
-.text-titel {
+
+.team-titel {
+  text-align: center;
   color: #2e2f42;
   font-size: 36px;
   font-weight: 700;
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  padding: 120px 0 72px;
-  text-align: center;
-  margin-bottom: 36px;
+  margin-bottom: 72px;
 }
+.team-inner {
+  display: flex;
+  gap: 24px;
+  margin-right: 0;
+}
+
 .team-frame {
   background-color: #ffffff;
   padding-bottom: 32px;
-  border-radius: 0px 0px 4px 4px;
+  border-radius: 0 0 4px 4px;
+  flex-basis: calc((100% - 72px)) / 4;
 }
 .team-icon {
   margin-bottom: 32px;
@@ -257,9 +256,14 @@ section {
   letter-spacing: 0.4px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  padding-bottom: 8px;
+  padding: 32px 0;
+}
+.team-name-list {
+  text-align: center;
+  margin-bottom: 8px;
 }
 .team-position {
+  text-align: center;
   font-size: 16px;
   font-weight: 400;
   letter-spacing: 0.32px;
@@ -268,20 +272,47 @@ section {
   letter-spacing: 0.02em;
 }
 /* portfolio */
+.portfolio-section {
+  padding: 120px 0 120px 0;
+}
+.portfolio-titel {
+  text-align: center;
+  color: #2e2f42;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  margin-bottom: 72px;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+}
+.portfolio-item {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
 
 .portfolio-frame {
   padding-bottom: 0px;
   flex-shrink: 0;
   margin-bottom: 48px;
-  border: 1px solid #e7e9fc;
+  width: calc((100% - 48px) / 3);
 }
-
+.portfolio-list {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
 .portfolio-offers {
   color: #2e2f42;
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 .portfolio-text {
   color: #434455;
@@ -290,26 +321,7 @@ section {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-/* .portfolio-adition {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 24px;
-  width: calc((100% - 48px) / 3);
-  margin: 0 auto;
-} */
-.portfolio-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 24px;
-  flex-direction: column;
-  /* width: calc((100% - 48px) / 3); */
-}
-.portfolio-servies {
-  display: flex;
-  gap: 24px;
-}
+
 /* footer */
 
 .foot-section {
