change width in section2,3calc

--- a/css/styles.css
+++ b/css/styles.css
@@ -199,7 +199,7 @@ section {
 .adentege-item {
   display: flex;
   align-items: center;
-  flex-basis: calc((100% - 72px)) / 4;
+  width: calc((100% - 72px) / 4);
 }
 .category {
   color: #2e2f42;
@@ -245,7 +245,7 @@ section {
   background-color: #ffffff;
   padding-bottom: 32px;
   border-radius: 0 0 4px 4px;
-  flex-basis: calc((100% - 72px)) / 4;
+  width: calc((100% - 72px) / 4);
 }
 .team-icon {
   margin-bottom: 32px;
