--- a/css/styles.css
+++ b/css/styles.css
@@ -244,7 +244,7 @@ section {
   padding-bottom: 32px;
   border-radius: 0 0 4px 4px;
   max-width: 264px;
-  width: calc((100% - 72px) / 4);
+  flex-basis: calc((100% - 72px) / 4);
 }
 .team-icon {
   margin-bottom: 32px;
