--- a/css/styles.css
+++ b/css/styles.css
@@ -241,7 +241,7 @@ section {
   background-color: #ffffff;
   padding-bottom: 32px;
   border-radius: 0 0 4px 4px;
-  flex-basis: calc((100% - 72px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 .team-icon {
   margin-bottom: 32px;
