--- a/css/styles.css
+++ b/css/styles.css
@@ -193,11 +193,10 @@ section {
 .adventege-list {
   display: flex;
   gap: 24px;
-
   margin: 0 auto;
 }
 .adventege-item {
-  width: calc((100% - 72px) / 4);
+  flex-basis: calc((100% - 72px) / 4);
 }
 .category {
   color: #2e2f42;
