creat mistakes padding,margin header

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,8 @@ a {
 ul {
   list-style: none;
   font-family: inherit;
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
 }
 
 h1,
@@ -57,15 +58,15 @@ button {
   overflow: hidden;
 }
 .container {
-  max-width: 1158px;
+  width: 1158px;
   margin: 0 auto;
+  padding: 0 15px;
 }
 section {
   padding: 120px 0;
 }
 .header {
   border-bottom: 1px solid var(--color-border);
-  padding: 24px 0;
 }
 .header-inner {
   display: flex;
@@ -164,6 +165,7 @@ section {
   letter-spacing: 0.02em;
   max-width: 496px;
   text-align: center;
+  margin: 0 auto;
 }
 
 /* button */
@@ -256,7 +258,6 @@ section {
 }
 .team-name {
   font-size: 20px;
-  font-weight: 500;
   letter-spacing: 0.4px;
   line-height: 1.2;
   letter-spacing: 0.02em;
@@ -267,6 +268,7 @@ section {
 .team-name-list {
   text-align: center;
   margin-bottom: 8px;
+  font-weight: 500;
 }
 .team-position {
   text-align: center;
