--- a/css/styles.css
+++ b/css/styles.css
@@ -258,6 +258,7 @@ section {
 }
 .team-name {
   font-size: 20px;
+  font-weight: 500;
   letter-spacing: 0.4px;
   line-height: 1.2;
   letter-spacing: 0.02em;
